<resources>
    <string name="app_name">Trade Tracker Pro</string>
    <string name="settingsLbl">Settings</string>
    <string name="settingsThemeLbl">Theme:</string>
    <string name="settingsExportEmailLbl">Export Email Address:</string>
    <string name="settingsTrend1Lbl">Trend Category 1:</string>
    <string name="settingsTrend2Lbl">Trend Category 2:</string>
    <string name="settingsTrend3Lbl">Trend Category 3:</string>
    <string name="settingsTrend4Lbl">Trend Category 4:</string>
    <string name="settingsTrend5Lbl">Trend Category 5:</string>
    <string name="settingsAcct1Lbl">Account Number 1:</string>
    <string name="settingsAcct2Lbl">Acccount Number 2:</string>
    <string name="settingsAcct3Lbl">Account Number 3:</string>
    <string name="settingsPortAmountLbl">Initial Portfolio Amount:</string>
    <string name="settingsTradeCountLbl">Count Trades Made Over:</string>
    <string name="settingsExportBtn">Export Trade Summary</string>
    <string name="entryLbl">New Entry</string>
    <string name="entryTickerLbl">Enter Ticker</string>
    <string name="entryDateLbl">Enter Date</string>
    <string name="entryEntryPriceLbl">Entry Price</string>
    <string name="entryExitPriceLbl">Exit Price</string>
    <string name="entrySizeLbl">Position Size</string>
    <string name="entryOutcomeCatLbl">Outcome Category</string>
    <string name="entryAcctNumLbl">Account Used</string>
    <string name="entryDetailsLbl">Entry  Notes..</string>
    <string name="exitDetailsLbl">Exit Notes..</string>
    <string name="entrySaveBtn">Save Entry</string>
    <string name="summaryLbl">Performance Summary</string>
    <string name="summaryCat1Lbl">Category 1</string>
    <string name="summaryCat2Lbl">Category 2</string>
    <string name="summaryCat3Lbl">Category 3</string>
    <string name="summaryCat4Lbl">Category 4</string>
    <string name="summaryCat5Lbl">Category 5</string>
    <string name="summaryDetailsBtn">View Trade Details</string>
    <string name="detailsLbl">Trade Details</string>
    <string name="detailsTickerLbl">Ticker: BRS</string>
    <string name="detailsDateLbl">Date: 10/1/2019</string>
    <string name="detailsEntryPriceLbl">Entry: $4.09</string>
    <string name="detailsExitPriceLbl">Exit: $4.50</string>
    <string name="detailsSizeLbl">Size: 1,000 Shares</string>
    <string name="detailsChangeLbl">Net Change: $1,500</string>
    <string name="detailsCatLbl">Category: Cat 1</string>
    <string name="detailsAcctLbl">Account: Acct 1</string>
    <string name="detailsDescripLbl">Summary of trade details goes here...</string>
    <string name="homeWinningTrendLbl">Winning Trend</string>
    <string name="homePortChgPercentLbl">% Change</string>
    <string name="homePortChgMoneyLbl">$ Change</string>
    <string name="homeLosingTrendLbl">Losing Trend</string>
    <string name="homeTotalTradesLbl">Total Trades</string>
    <string name="newEntrySuccessful">New Entry Added Successfully!</string>
    <string name="detailsDeleteBtn">Delete This Entry</string>
    <string name="entryDeleted">Trade Has Been Successfully Deleted</string>
    <string name="entryNotValid">Trade Entry Is Not Valid!</string>
    <string-array name="tradeCounterSelection">
        <item>"Daily"</item>
        <item>"Weekly"</item>
        <item>"Monthly"</item>
    </string-array>
</resources>
