<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/entry_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!-- Activity Trade Entry Label -->
        <TextView
            android:id="@+id/entryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/entryLbl"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- Enter Ticker -->
        <EditText
            android:id="@+id/entryTicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="20dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:hint="@string/entryTickerLbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entryTitle" />
        <!-- Enter Date -->
        <Button
            android:id="@+id/dateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/entryDateLbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entryTitle" />


        <!-- Enter Entry Price -->
        <EditText
            android:id="@+id/entryEntryPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="20dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:hint="@string/entryEntryPriceLbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entryTicker" />
        <!-- Enter Exit Price -->
        <EditText
            android:id="@+id/entryExitPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:hint="@string/entryExitPriceLbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateBtn" />


        <!-- Enter Position Size -->
        <EditText
            android:id="@+id/entrySize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:hint="@string/entrySizeLbl"
            app:layout_constraintStart_toStartOf="@+id/entryEntryPrice"
            app:layout_constraintTop_toBottomOf="@+id/entryEntryPrice" />
        <!-- Enter Category Selection -->
        <EditText
            android:id="@+id/outcomeCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:hint="@string/entryOutcomeCatLbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entrySize" />


        <!-- Enter Account Selection -->
        <EditText
            android:id="@+id/acctNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:hint="@string/entryAcctNumLbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outcomeCat" />


        <!-- Enter Trade Details -->
        <EditText
            android:id="@+id/tradeEntryDescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:inputType="textMultiLine"
            android:minLines="6"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:hint="@string/entryDetailsLbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/acctNum" />

        <EditText
            android:id="@+id/tradeExitDescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="textMultiLine"
            android:minLines="6"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:hint="@string/exitDetailsLbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/acctNum" />

        <!-- Save Button -->

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/entrySaveBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tradeEntryDescrip" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
